linux (1:2.6.39.4-9) vincent hugo; urgency=low

  * Adding postinst with user restart message (Closes: #1832)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 18 Jan 2012 14:06:17 +0100

linux (1:2.6.39.4-8) vincent hugo; urgency=low

  * Remame package to bubba3-kernel to simplify migration

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 14:18:40 +0100

linux (1:2.6.39.4-7) vincent hugo; urgency=low

  * add bubba3-modules for conflicts et al

 -- Carl Fürstenberg <carl@excito.com>  Mon, 09 Jan 2012 15:51:16 +0100

linux (1:2.6.39.4-6) vincent hugo; urgency=low

  * Adding patches for nfs4 support
  * fix conflicts

 -- Carl Fürstenberg <azatoth@gmail.com>  Wed, 21 Dec 2011 16:01:32 +0100

linux (1:2.6.39.4-5) unstable; urgency=low

  * update b3 kernel configuration patches
  * enable parallel build and rename package for armel

 -- Carl Fürstenberg <carl@excito.com>  Mon, 24 Oct 2011 14:38:15 +0200

linux (1:2.6.39.4-4) unstable; urgency=low

  * update Bubba|2 config
  * testing new config

 -- Carl Fürstenberg <carl@excito.com>  Fri, 19 Aug 2011 14:21:36 +0200

linux (1:2.6.39.4-3) unstable; urgency=low

  * Add device tree files for Bubba|2

 -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Aug 2011 17:50:03 +0200

linux (1:2.6.39.4-2) unstable; urgency=low

  * Increase epoch due to previous packages has epochs

 -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Aug 2011 15:01:59 +0200

linux (2.6.39.4-1) unstable; urgency=low

  * Initial Release.

 -- Carl Fürstenberg <carl@excito.com>  Wed, 17 Aug 2011 18:39:16 +0200