@@ -1,2 +1,3 @@
 !patches
 !patches/*
+*debhelper.log
