@@ -14,3 +14,11 @@ Replaces: bubba-modules, bubba3-modules, bubba-kernel
 Depends: ${misc:Depends}
 Description: The linux kernel for the Excito platforms
  Contains the linux kernel modified to fit on the Excito platforms
+
+Package: bubba3-kernel-headers
+Architecture: armel powerpc
+Provides: linux-headers
+Depends: ${misc:Depends}
+Description: Header files for Excito modified kernel
+ This package provides the architecture-specific kernel header files for
+ Linux kernel modified by excito.
