@@ -1,3 +1,9 @@
+linux (1:2.6.39.4-10) vincent hugo; urgency=low
+
+  * Create header package
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 13 Feb 2012 16:33:11 +0100
+
 linux (1:2.6.39.4-9) vincent hugo; urgency=low
 
   * Adding postinst with user restart message (Closes: #1832)
